infrastructure/k8s/backend-rtmp-server/backend-rtmp-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autopilot-drone-backend-rtmp-server
  namespace: autopilot-drone
spec:
  type: NodePort
  ports:
  - port: 1953
    targetPort: 1953
    nodePort: 31953
  selector:
    app: autopilot-drone-backend-rtmp-server
